# generative-ui-london-hackathon-starter

./: .env.example  AGENTS.md  FROZEN.md  HACKATHON.md  HACKATHON_REQUIREMENTS.md  README.md  SUBMITTING.md  langgraph.json  package.json  pnpm-lock.yaml
agent/: .env.example  main.py  pyproject.toml
agent/src/: banking_agent.py  case_reasoner.py  catalog.py
agent/tests/: test_banking_agent.py  test_case_reasoner.py
docs/: DEMO_SCRIPT.md  rho-signal-room.md  troubleshooting.md
docs/known-issues/: UPSTREAM-ISSUE-DRAFT.md  ag-ui-message-not-found.md  snapshot-mode-fallback.md
docs/migration/: phase2-promote-pdf-analyst.md
other-examples/: PLAN.md  README.md
other-examples/legal-contract-review/agent/: graph.py
other-examples/legal-contract-review/catalog/: definitions.ts  renderers.tsx
other-examples/realestate/: Dockerfile  EXAMPLE.json  README.md
other-examples/realestate/agent/: langgraph.json  pyproject.toml
other-examples/realestate/agent/realestate_agent/: __init__.py  graph.py  prompts.py  tools.py
other-examples/realestate/agent/realestate_agent/data/: listings.json
other-examples/realestate/catalog/: definitions.ts  index.ts  renderers.tsx  theme.css
other-examples/realestate/schemas/: listing_detail.fixture.json  listing_detail.json  listing_grid.fixture.json  listing_grid.json  offer_letter_draft.fixture.json  (+3 more)
other-examples/travel/: Dockerfile  EXAMPLE.json  README.md
scripts/: _smoke-examples.ts  load-test-gemini.py  probe-gemini.sh  run-agent.sh  smoke.ts
src/a2ui/: theme.css
src/app/: globals.css  layout.tsx
(+46 files in other folders)
